PulseAudio does not update output device list
- Start audio playback with the PA output.
- Look at the devices list in the Audio menu.
- Connect a new audio device (e.g. USB stick, BlueTooth headset)
- Check the devices list in the Audio menu again.
The list is not updated. I consider this a minor bug because it also affects most other audio outputs. But in the case of PulseAudio it is not very hard to fix.