PulseAudio: keep track of available devices (fix #5412)